[package]
name = "tools_fabric_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-metadata = "0.54"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
convert_case = "0.6.0"
itertools = "0.12.0"
